Remove login from sidebar on sub pages starting with /doc, add variable for top and bottom spacing, and fix missing bottom space in main layout.

--- a/dev/scss/main/intro.scss
+++ b/dev/scss/main/intro.scss
@@ -6,7 +6,6 @@
 div.intro {
 
   &-container {
-    margin-top: 3rem;
     display: flex;
     gap: $standard-size-and-spacing;
   }
